--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
   "root": true,
+  "parser": "babel-eslint",
   "ignorePatterns": ["projects/**/*"],
   "overrides": [
     {
       "files": ["*.ts"],
       "parserOptions": {
+
+
         "project": ["tsconfig.json"],
         "createDefaultProgram": true
       },
